Fix input overflow inside flex container
[MAILPOET-3503]

--- a/assets/css/src/generic/_forms-input.scss
+++ b/assets/css/src/generic/_forms-input.scss
@@ -8,6 +8,7 @@
   height: $form-control-height;
   justify-content: center;
   max-width: 100%;
+  min-width: 0;
   padding: 0;
   position: relative;
   text-align: left;
